@@ -4,6 +4,7 @@
 #
 #  Updated:
 #  23-Aug-2024 dwp Use context manager for opening connections to ensure they close properly
+#  26-Aug-2024 dwp Revert back to persistent client connections
 #
 ##
 """
@@ -15,7 +16,6 @@ import time
 
 from rcsb.db.mongo.Connection import Connection
 from rcsb.db.mongo.DocumentLoader import DocumentLoader
-from rcsb.db.mongo.MongoDbUtil import MongoDbUtil
 
 logger = logging.getLogger(__name__)
 
@@ -34,15 +34,19 @@ class TargetCofactorDbProvider:
         #
         self.__databaseName = kwargs.get("databaseName", "cofactor_exdb")
         self.__collectionName = kwargs.get("collectionName", self.__cofactorResourceName)
+        #
+        conn = Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName)
+        conn.openConnection()
+        self.__client = conn.getClientConnection()
+        self.__db = self.__client[self.__databaseName]
+        self.__collection = self.__db[self.__collectionName]
 
     def cofactorDbCount(self):
         """Count the number of documents in the cofactor collection.
         """
         count = 0
         try:
-            with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-                mg = MongoDbUtil(client)
-                count = mg.count(self.__databaseName, self.__collectionName)
+            count = self.__collection.count_documents({})
         except Exception as e:
             logger.exception("Failing with %s", str(e))
         return count
@@ -53,14 +57,14 @@ class TargetCofactorDbProvider:
         :param rcsb_id: The rcsb_id of the document to fetch.
         :return: The 'rcsb_cofactors' field if present, otherwise None.
         """
-        document = None
-        with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-            mg = MongoDbUtil(client)
-            document = mg.fetchOne(self.__databaseName, self.__collectionName, "rcsb_id", rcsbEntityId.upper())
-        if document and dataFieldName in document:
-            return document[dataFieldName]
-        else:
-            return []
+        data = []
+        try:
+            document = self.__collection.find_one({"rcsb_id": rcsbEntityId.upper()})
+            if document and dataFieldName in document:
+                data = document[dataFieldName]
+        except Exception as e:
+            logger.exception("Failing with %s", str(e))
+        return data
 
     def loadCofactorData(self, cofactorResourceName, cofactorProvider, **kwargs):
         """Load cofactor data for the input data resource.
